# pg-migrate

./: .gitignore  Cargo.toml  LICENSE  README.md  pg-sync.toml
cli/: Cargo.toml
cli/src/: main.rs
data/: schema.2.1.sql  schema.3.1.sql  schema.3.4.sql
data/tests_add_remove_change_pks/: test_1_new_table_simple_pk.1.sql  test_2_new_table_alt_add_pk.1.sql  test_2_new_table_alt_add_pk.2.sql
data/tests_add_remove_columns/: schema.tests_1_add_remove_columns.2.sql  schema.tests_2_add_remove_columns.2.sql  schema.tests_2_add_remove_columns.3.sql
data/tests_basic_add_table/: schema.test_1_add_new_table.1.sql  schema.test_2_add_new_table.2.sql  schema.test_3_add_new_table.1.sql  schema.test_3_add_new_table.2.sql  schema.test_3_add_new_table.3.sql  schema.test_3_add_new_table.5.sql
pg_functions/: Cargo.toml
pg_functions/sql/: get_version.sql
pg_functions/src/: lib.rs
pg_migrate_lib/: Cargo.toml
pg_migrate_lib/sql/: get_table_definition.sql
pg_migrate_lib/src/: lib.rs  pg_functions.rs  tests.rs
src/: apply_file.rs  arguments.rs  db_connection.rs  file_loader.rs  lib.rs  main.rs  plan.rs  queries.sql  settings.rs
tests/: tests.rs  tests_add_remove_change_pks.rs  tests_add_remove_columns.rs  tests_basic_add_table.rs
