[package]
name = "pg_sync"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
#license-file = "LICENSE"
description = "PostgreSQL DML change management tool"
repository = "https://github.com/sam-mmm/pg-sync"
readme = "README.md"
#[[bin]]
#name = "pg_sync"
#path = "src/main.rs"
#[lib]
#name = "pg_sync"
#path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
snafu = "0.7"
version = "3.0"
sqlparser = { version = "0.18" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }

clap = { version = "3.1", features = ["derive"] }
config = "0.13"

bunt = "0.2"
tabled = "0.7.0"

log = "0.4"
fern = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"


[dev-dependencies]
test-env-helpers = "0.2"
test-context = "0.1"